2010-08-12  Ales Cepek  <cepek@gnu.org>

	* cvs repository moved to git

$ git cvsimport -d:pserver:anonymous@cvs.sv.gnu.org:/sources/sqltutor sqltutor

$ git branch
* master
  origin

$ git diff --name-status master..origin
$ git tag sqltutor-0.6
$ git branch -d origin

$ git push --tags -v  cepek@git.sv.gnu.org:/srv/git/sqltutor.git
$ git push --all  -v  cepek@git.sv.gnu.org:/srv/git/sqltutor.git


2010-02-04  Ales Cepek  <cepek@gnu.org>

	* released version 0.6

	* updated version of CGI classes

2009-04-01  Ales Cepek  <cepek@gnu.org>

	* copyright assigned to FSF

2009-02-20  Ales Cepek  <cepek@gnu.org>

	* in HTML all colspan='0' replaced by explicit values
	  colspan='N' (IE6 doesn't honor the colspan="0", with or without
	  a colgroup defined)

2009-02-17  Ales Cepek  <cepek@gnu.org>

	* in helper program `.quiz/quiz' precessing of comment lines
	starting with # replaced by standard SQL comments /* ... */.  All
	quiz files updated correspodingly.
	
	* updated licence for c++ codes and added to all *.sql and *.quiz
	files
	
	* upgrade to PostgreSQL 8.3 (Debian 5.0 Lenny) C-style escape
	characters we removed from all SQL constant strings

2009-01-24  Ales Cepek  <cepek@gnu.org>
	
	* sqltutor moved from cvs.savannah.nognu.org to
	cvs.savannah.gnu.org:/sources/sqltutor

	* rms dubbed sqltutor a GNU package (2009-01-23)

2008-12-01  Stepan Kasal  <kasal@ucw.cz>

	* several corrections and improvements in configure.ac

2008-09-14  Ales Cepek  <cepek@gnu.org>

	* added sqltutor schema in version 0.04

2007-08-21  Ales Cepek  <cepek@gnu.org>

	* start of the project 


	